tests-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0258/input.js
function f(a, ...b, c){}
